# margen

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.back  Makefile.dev  PKGBUILD  README.md  configure  configure.ac
.github/workflows/: ci.yml
src/: args.c  args.h  bmp.c  bmp.h  config.h  const.h  generator.c  generator.h  main.c  main.h  rand.c  rand.h  types.h
